# cgh

./: .gitignore  .prettierrc  README.md  prek.toml  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
src/cgh/: __init__.py  aws.py  clone.py  command.py  config.py  errors.py  git.py  jira.py  json_object.py  memoize.py  pr.py  utils.py  web.py
src/cgh/pr/: __init__.py  checkout.py  create.py  edit.py  list.py  merge.py  view.py
